--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,8 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.js"></script>
+    <script src="//cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -15,11 +17,15 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
-    <script src="js/app.js"></script>
+
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/login.js"></script>
+
+    <script src="js/app.js"></script>
+
 
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
@@ -33,3 +39,6 @@
 </div>
   </body>
 </html>
+
+
+
