--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/artistName.js"></script>
 
     <script src="js/app.js"></script>
 
