--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="js/directives.js"></script>
     <script src="js/login.js"></script>
     <script src="js/artistName.js"></script>
+    <script src="js/songTitleSearch.js"></script>
 
     <script src="js/app.js"></script>
 
