--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="js/artistName.js"></script>
     <script src="js/songTitleSearch.js"></script>
     <script src="js/albumSearch.js"></script>
+      <script src="js/relatedArtist.js"></script>
 
     <script src="js/app.js"></script>
 
