--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/albumSearch.js"></script>
     <script src="js/relatedArtist.js"></script>
     <script src="js/artistHome.js"></script>
+    <script src="js/artistService.js"></script>
 
     <script src="js/app.js"></script>
 
