--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="js/relatedArtist.js"></script>
     <script src="js/artistHome.js"></script>
     <script src="js/artistService.js"></script>
+    <script src="js/feedback.js"></script>
 
     <script src="js/app.js"></script>
 
