--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,8 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="lib/ionic/css/style.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.js"></script>
-    <script src="//cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+    <script src="lib/ngstorage/ngStorage.js"></script>
+    <script src="lib/firebase/firebase.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
