--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/artistHome.js"></script>
     <script src="js/artistService.js"></script>
     <script src="js/feedback.js"></script>
+    <script src="js/myLikes.js"></script>
 
     <script src="js/app.js"></script>
 
